# AI-Lab-Fixed

./: .coverage  README.md  compressed.lzw  compressed_words.bin.tree  protein_word_lempel_decompressed.txt  pyproject.toml  temp_input.txt
docs/: README.md  coverage_report.txt
src/: .coverage  Calc_Textbook.txt  Calc_Textbook_lempel_compressed.lzw  Huffman3_with_compress_serialized_tree.py  Lempel_with_compress.py  Short_story_huffman_decompressed.txt  Short_story_lempel_compressed.lzw  UI_implementation.py  War_and_Peace_lempel_compressed.lzw  compressed.lzw  compressed_words.bin.tree  protein_word_lempel_compressed.lzw  words_lempel_compressed.lzw
tests/: test_huffman.py  test_lzw.py  test_ui.py
